# Civitro_Dev

./: .env.example  .gitignore  Makefile  STARTUP.md  go.work
.claude/: settings.local.json
.github/workflows/: ai-services.yml  backend.yml  deploy.yml  docker.yml  frontend.yml
ai/: requirements.txt
ai/services/bhashini/: Dockerfile  download_models.py  pyproject.toml
ai/services/bhashini/app/: main.py  models.py  routes.py  service.py
ai/services/classification/: Dockerfile  pyproject.toml
ai/services/classification/app/: main.py  models.py  repository.py  routes.py  service.py
ai/services/datamine/: Dockerfile  pyproject.toml
ai/services/datamine/app/: main.py  models.py  repository.py  routes.py  service.py  tasks.py
ai/services/fraud/: Dockerfile  pyproject.toml
ai/services/fraud/app/: main.py  models.py  repository.py  routes.py  service.py
ai/services/sentiment/: Dockerfile  pyproject.toml
ai/services/sentiment/app/: main.py  models.py  repository.py  routes.py  service.py
ai/services/translation/: Dockerfile  pyproject.toml
ai/services/translation/app/: main.py  models.py  routes.py  service.py
ai/shared/: pyproject.toml
ai/shared/civitro_common/: __init__.py  config.py  database.py  errors.py  events.py  logger.py  storage.py
backend/pkg/: go.mod  go.sum
config/: default.yaml  docker.yaml  production.yaml  production.yaml.example
docs/: ARCHITECTURE_ADDENDUM_2026-03-20.md  aws-infrastructure.md  civitro_2.html  civitro_architecture.html  config-architecture.md  dashboard-preview.html  i18n-translations.md  tagline.md
frontend/mobile/: .env.example  App.tsx  app.json  babel.config.js  eas.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/shared/: package.json  tsconfig.json
frontend/web/: Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.override.yml  docker-compose.yml
infra/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_timescaledb_schema.down.sql  000002_timescaledb_schema.up.sql  000003_kyc_schema.down.sql  000003_kyc_schema.up.sql  000004_verification_audit.down.sql  000004_verification_audit.up.sql  000005_governance_chain.down.sql  000005_governance_chain.up.sql  000006_user_location.down.sql  000006_user_location.up.sql  000007_issue_comments_upvotes.down.sql  000007_issue_comments_upvotes.up.sql  000008_community_actions_patterns.down.sql  000008_community_actions_patterns.up.sql  000009_governance_ward_mood.up.sql  000010_push_tokens.down.sql  000010_push_tokens.up.sql  000011_participatory_budgets.down.sql  000011_participatory_budgets.up.sql  000012_fraud_detection.down.sql  000012_fraud_detection.up.sql  000013_issue_translations.down.sql  000013_issue_translations.up.sql  000014_voice_translations.down.sql  000014_voice_translations.up.sql  000015_message_translations.down.sql  000015_message_translations.up.sql  000016_issue_first_response.down.sql  000016_issue_first_response.up.sql  run_timescaledb.go  seed_dashboard_data.sql  seed_leaders_boundaries.sql  (+1 more)
logs/: conversation-log.md
memory/: project-summary.md
proto/: buf.gen.yaml  buf.yaml
scripts/: generate-translations.py  load-boundaries.py  start-infra.sh
simulation/: demo.html
(+607 files in other folders)
