[project]
name = "civitro-fraud-detection"
version = "0.1.0"
description = "Fraud Detection Service — duplicate content, velocity, brigading detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "scikit-learn>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
