[project]
name = "civitro-sentiment"
version = "0.1.0"
description = "AI Sentiment & Trends service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
