[project]
name = "civitro-translation"
version = "0.1.0"
description = "AI Translation service — Ollama (dev) / Bhashini (prod)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
